@@ -8,7 +8,8 @@ import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLConnection;
 import java.nio.file.Files;
 import java.util.ArrayList;
@@ -20,10 +21,10 @@ import org.apache.commons.lang.StringUtils;
 import net.sf.json.JSONObject;
 
 public class ImageHostUpload {
-	
+
 	private static String targetFloderPath = "D:\\imageCache\\20180828\\test";
 	private static String uploadUrl = "https://sm.ms/api/upload";
-	
+
 	private static String uploadImage(String filePath) throws MalformedURLException, IOException {
 		String charset = "UTF-8";
 		String param = "value";
@@ -31,35 +32,44 @@ public class ImageHostUpload {
 		String boundary = Long.toHexString(System.currentTimeMillis()); // Just generate some unique random value.
 		String CRLF = "\r\n"; // Line separator required by multipart/form-data.
 
-		URLConnection connection = new URL(uploadUrl).openConnection();
+		URLConnection connection = null;
+		try {
+			connection = new URI(uploadUrl).toURL().openConnection();
+		} catch (MalformedURLException e) {
+			e.printStackTrace();
+		} catch (IOException e) {
+			e.printStackTrace();
+		} catch (URISyntaxException e) {
+			e.printStackTrace();
+		}
 		connection.setDoOutput(true);
 		connection.setRequestProperty("Content-Type", "multipart/form-data; boundary=" + boundary);
 
-		try (
-		    OutputStream output = connection.getOutputStream();
-		    PrintWriter writer = new PrintWriter(new OutputStreamWriter(output, charset), true);
-		) {
-		    // Send normal param.
-		    writer.append("--" + boundary).append(CRLF);
-		    writer.append("Content-Disposition: form-data; name=\"param\"").append(CRLF);
-		    writer.append("Content-Type: text/plain; charset=" + charset).append(CRLF);
-		    writer.append(CRLF).append(param).append(CRLF).flush();
+		try (OutputStream output = connection.getOutputStream();
+				PrintWriter writer = new PrintWriter(new OutputStreamWriter(output, charset), true);) {
+			// Send normal param.
+			writer.append("--" + boundary).append(CRLF);
+			writer.append("Content-Disposition: form-data; name=\"param\"").append(CRLF);
+			writer.append("Content-Type: text/plain; charset=" + charset).append(CRLF);
+			writer.append(CRLF).append(param).append(CRLF).flush();
 
-		    // Send binary file.
-		    writer.append("--" + boundary).append(CRLF);
-		    writer.append("Content-Disposition: form-data; name=\"smfile\"; filename=\"" + imageFile.getName() + "\"").append(CRLF);
-		    writer.append("Content-Type: " + URLConnection.guessContentTypeFromName(imageFile.getName())).append(CRLF);
+			// Send binary file.
+			writer.append("--" + boundary).append(CRLF);
+			writer.append("Content-Disposition: form-data; name=\"smfile\"; filename=\"" + imageFile.getName() + "\"")
+					.append(CRLF);
+			writer.append("Content-Type: " + URLConnection.guessContentTypeFromName(imageFile.getName())).append(CRLF);
 //		    writer.append("Content-Transfer-Encoding: binary").append(CRLF);
-		    writer.append(CRLF).flush();
-		    Files.copy(imageFile.toPath(), output);
-		    output.flush(); // Important before continuing with writer!
-		    writer.append(CRLF).flush(); // CRLF is important! It indicates end of boundary.
+			writer.append(CRLF).flush();
+			Files.copy(imageFile.toPath(), output);
+			output.flush(); // Important before continuing with writer!
+			writer.append(CRLF).flush(); // CRLF is important! It indicates end of boundary.
 
-		    // End of multipart/form-data.
-		    writer.append("--" + boundary + "--").append(CRLF).flush();
+			// End of multipart/form-data.
+			writer.append("--" + boundary + "--").append(CRLF).flush();
 		}
 
-		// Request is lazily fired whenever you need to obtain information about response.
+		// Request is lazily fired whenever you need to obtain information about
+		// response.
 		HttpURLConnection urlConnection = ((HttpURLConnection) connection);
 		int responseCode = ((HttpURLConnection) connection).getResponseCode();
 		System.out.println(responseCode); // Should be 200
@@ -69,24 +79,24 @@ public class ImageHostUpload {
 		String body = IOUtils.toString(in, encoding);
 		System.out.println(body);
 		return body;
-		
+
 	}
-	
-	public static void main(String[] args) throws MalformedURLException, IOException  {
+
+	public static void main(String[] args) throws MalformedURLException, IOException {
 		File targetFolder = new File(targetFloderPath);
 		File[] files = targetFolder.listFiles();
-		
+
 		List<String> resultList = new ArrayList<String>();
 		String tmpResult = null;
-		for(File f : files) {
+		for (File f : files) {
 			tmpResult = uploadImage(f.getAbsolutePath());
-			if(!StringUtils.isBlank(tmpResult)) {
+			if (!StringUtils.isBlank(tmpResult)) {
 				resultList.add(tmpResult);
 			}
 		}
-		
+
 		JSONObject tmpJson = null;
-		for(String r : resultList) {
+		for (String r : resultList) {
 			tmpJson = JSONObject.fromObject(r);
 			System.out.println(tmpJson);
 		}
